<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="100"
    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/tvStyle"
	        android:textStyle="bold"
	        android:layout_weight="50"
	        android:gravity="center"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/style" />
	
	    <TextView
	        android:id="@+id/tvGravity"
	        android:textStyle="bold"
	        android:layout_weight="50"
	        android:gravity="center"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/gravity" />
	</LinearLayout>
	
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="100"
    android:orientation="horizontal" >
		<RadioGroup android:id="@+id/rgStyle" android:orientation="vertical" android:layout_weight="50" android:layout_width="fill_parent" android:layout_height="wrap_content">
		    <RadioButton
		        android:id="@+id/rbNormal"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/normal" />
		    <RadioButton
		        android:id="@+id/rbItatlic"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/italic" />
		    <RadioButton
		        android:id="@+id/rbBold"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bold" />
	    </RadioGroup>
	    
		
		<RadioGroup android:id="@+id/rgGravity" android:orientation="vertical" android:layout_weight="50" android:layout_width="fill_parent" android:layout_height="wrap_content">
		    <RadioButton
		        android:id="@+id/rbLeft"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/left" />
		    <RadioButton
		        android:id="@+id/rbCenter"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/center" />
		    <RadioButton
		        android:id="@+id/rbRight"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/right" />
	    </RadioGroup>
	</LinearLayout>

    <Button
        android:id="@+id/bGenerate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate" />

    <TextView
        android:id="@+id/tvChange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/type_in_text_and_press_the_button_below" />

</LinearLayout>
