<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_woods" >

    <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
    <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->
    <!-- tools:context=".MainActivity" > -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_be_what_apos_s_up"
        android:textColor="#ffffff" />

    <ScrollView android:layout_width="fill_parent" android:layout_height="200dp">
    	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">"
		    <Button
		        android:id="@+id/tutorial1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/button1"
		        android:textColor="#ffffff"
		        android:textSize="25sp"
		        android:textStyle="bold" />
		
		    <Button
		        android:id="@+id/tutorial2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/button_2"
		        android:textColor="#ffffff"
		        android:textSize="25sp"
		        android:textStyle="bold" />
		
		    <Button
		        android:id="@+id/tutorial3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/tutorial_3"
		        android:textColor="#ffffff"
		        android:textSize="25sp"
		        android:textStyle="bold" />
		
		    <Button
		        android:id="@+id/tutorial4"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/button_2"
		        android:textColor="#ffffff"
		        android:textSize="25sp"
		        android:textStyle="bold" />
		
		    <Button
		        android:id="@+id/tutorial5"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/button_2"
		        android:textColor="#ffffff"
		        android:textSize="25sp"
		        android:textStyle="bold" />
	    
	    </LinearLayout>
	    
	</ScrollView>

</LinearLayout>